; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_close_cached_dir.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_close_cached_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cached_dir = type { %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cached_dir*)* @close_cached_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_cached_dir(%struct.cached_dir* %0) #0 {
  %2 = alloca %struct.cached_dir*, align 8
  store %struct.cached_dir* %0, %struct.cached_dir** %2, align 8
  %3 = load %struct.cached_dir*, %struct.cached_dir** %2, align 8
  %4 = getelementptr inbounds %struct.cached_dir, %struct.cached_dir* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.cached_dir*, %struct.cached_dir** %2, align 8
  %9 = getelementptr inbounds %struct.cached_dir, %struct.cached_dir* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @closedir(i64 %10)
  br label %12

12:                                               ; preds = %7, %1
  %13 = load %struct.cached_dir*, %struct.cached_dir** %2, align 8
  %14 = getelementptr inbounds %struct.cached_dir, %struct.cached_dir* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = icmp ne %struct.TYPE_2__* %15, null
  br i1 %16, label %17, label %26

17:                                               ; preds = %12
  %18 = load %struct.cached_dir*, %struct.cached_dir** %2, align 8
  %19 = getelementptr inbounds %struct.cached_dir, %struct.cached_dir* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i32 1, i32* %21, align 4
  %22 = load %struct.cached_dir*, %struct.cached_dir** %2, align 8
  %23 = getelementptr inbounds %struct.cached_dir, %struct.cached_dir* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  store i32 1, i32* %25, align 4
  br label %26

26:                                               ; preds = %17, %12
  ret void
}

declare dso_local i32 @closedir(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
